--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ p {
   grid-template-columns: 15% 70% 15%;
   width: 100%;
   height: 55px;
-  margin: 16px 0 10px 0;
+  margin: 12px 0 10px 0;
   /* margin-top: ; */
   align-content: center;
 }
@@ -43,15 +43,6 @@ p {
   flex-direction: column;
   margin: 20px 20px;
   margin-bottom: 0;
-}
-
-
-#greeting2 {
-  width: 100%;
-  color: #f34910;
-  font-weight: 500;
-  margin: 0;
-  margin-bottom: 5px;
 }
 
 #greeting {
@@ -99,22 +90,6 @@ p {
 #venue {
   font-size: 13px;
   margin-bottom: 70px;
-}
-
-#contactTxt {
-  margin-top: 40px;
-  font-size: 13px;
-  text-align: center;
-  width: 88%;
-}
-
-#contactMail {
-  text-align: center;
-  width: 100%;
-  font-size: 13px;
-  font-weight: bold;
-  text-decoration: underline;
-  color: inherit;
 }
 
 #mainProgram {
@@ -289,9 +264,17 @@ p {
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin: 1% 20px;
+  margin: 15px 20px;
   margin-bottom: 0;
   padding-bottom: 125px;
+}
+
+#greeting2 {
+  width: 100%;
+  color: #f34910;
+  font-weight: 500;
+  margin: 0;
+  margin-bottom: 5px;
 }
 
 #title2 {
@@ -308,4 +291,20 @@ p {
   -webkit-text-fill-color: transparent;
   margin: 0;
   margin-bottom: 10px;
+}
+
+#contactTxt {
+  margin-top: 40px;
+  font-size: 13px;
+  text-align: center;
+  width: 88%;
+}
+
+#contactMail {
+  text-align: center;
+  width: 100%;
+  font-size: 13px;
+  font-weight: bold;
+  text-decoration: underline;
+  color: inherit;
 }
