--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ p {
   display: none;
 }
 
+#partnersDesk {
+  display: none;
+}
+
 .mobileHeader {
   display: grid;
   grid-template-columns: 15% 70% 15%;
@@ -443,7 +447,7 @@ p {
   color: whitesmoke;
 }
 
-#partnersList {
+.partnersList {
   display: flex;
   width: 350px;
   flex-wrap: wrap;
@@ -453,7 +457,11 @@ p {
 }
 
 .partnerItem {
-  width: 100px;
+  max-width: 100px;
+}
+
+#footer2 {
+  display: none;
 }
 
 #footer {
@@ -462,17 +470,17 @@ p {
   padding: 30px 0;
 }
 
-#footerImgPH {
+.footerImgPH {
   width: 360px;
   display: flex;
   align-items: center;
 }
 
-#footerImg {
+.footerImg {
   width: 190px;
 }
 
-#footerTxt {
+.footerTxt {
   font-size: 13px;
 }
 
@@ -567,7 +575,7 @@ p {
   }
 
   #mainTitle {
-    font-size: 30px;
+    font-size: 38px;
   }
 
   .guideBar {
@@ -578,9 +586,8 @@ p {
     flex-direction: row;
     gap: 3px;
     justify-content: center;
-    padding: 0 15%;
+    padding: 0 14%;
     width: 100%;
-    /* flex-wrap: wrap; */
   }
 
   .programFeat {
@@ -596,6 +603,7 @@ p {
   .featureDesc {
     width: 100%;
     text-align: center;
+    font-size: 20px;
   }
 
   #joinBttn {
@@ -615,7 +623,103 @@ p {
   }
 
   #mainProgram {
-    padding: 50px 0;
+    padding: 20px 0 40px 0;
+    gap: 10px;
   }
 
+  #featuredSpeakers {
+    padding: 20px 0 40px 0;
+    gap: 10px;
+  }
+
+  #speakersTitle {
+    font-size: 38px;
+  }
+
+  #speakersList {
+    padding: 0 15%;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 40px;
+  }
+
+  .speakerCard {
+    width: 49%;
+  }
+
+  .speakerName {
+    font-size: 25px;
+    margin-bottom: 5px;
+  }
+
+  .speakerRes {
+    font-size: 14px;
+  }
+
+  .speakerDesc {
+    font-size: 16px;
+  }
+
+  .speakerBar {
+    border-width: 2px;
+  }
+
+  .speakerTxt {
+    justify-content: space-between;
+    gap: 2px;
+  }
+
+  #moreBttn {
+    display: none;
+  }
+
+  #partnersDesk {
+    display: flex;
+    background-color: #414246;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px 11%;
+  }
+  
+  #partnerTitleDesk {
+    font-size: 38px;
+    color: whitesmoke;
+  }
+
+  .partnersList {
+    width: 100%;
+    justify-content: center;
+    gap: 10px;
+  }
+
+  .partnerItem {
+    max-width: 200px;
+  }
+
+  #footer2 {
+    display: flex;
+    padding: 0 15%;
+    align-content: center;
+  }
+
+  .footerImgPH {
+    justify-content: space-around;
+    width: 100%;
+    gap: 10px;
+  }
+
+  .footerImg {
+    height: 150px;
+    width: 300px;
+  }
+
+  .footerTxt {
+    font-size: 15px;
+  }
+
+  #footerTxt2 {
+    font-size: 12px;
+    line-height: 100%;
+  }
 }
