Fix Stylelint errors

--- a/styles.css
+++ b/styles.css
@@ -528,6 +528,7 @@ p {
   .topMenu2 {
     display: flex;
     align-items: center;
+
     /* justify-content: end; */
     width: 100%;
     padding: 0 15% 0 12%;
@@ -535,14 +536,13 @@ p {
     height: 80px;
     gap: 40px;
     box-shadow: 0 0 10px 0 gray;
-
   }
 
   #headline {
-    margin: 0px 15%;
+    margin: 0 15%;
     padding-top: 140px;
   }
-  
+
   .deskImgPH {
     margin-right: auto;
   }
@@ -553,10 +553,10 @@ p {
 
   .topMenu2Txt {
     text-decoration: none;
-    color: #999999;
+    color: #999;
     font-size: 16px;
     font-weight: 700;
-    justify-self;
+    justify-self: center;
   }
 
   #greeting {
@@ -565,7 +565,7 @@ p {
   }
 
   #name {
-    font-size:80px;
+    font-size: 80px;
     line-height: 90%;
     font-weight: 900;
   }
@@ -625,15 +625,15 @@ p {
   }
 
   #wholeProgram {
-  display: block;
-  padding: 20px;
-  text-align: center;
-  color: whitesmoke;
-  font-size: 20px;
-  font-weight: 400;
-  margin: 20px 0 36px 0;
-  margin-top: 20px;
-  margin-bottom: 50px;
+    display: block;
+    padding: 20px;
+    text-align: center;
+    color: whitesmoke;
+    font-size: 20px;
+    font-weight: 400;
+    margin: 20px 0 36px 0;
+    margin-top: 20px;
+    margin-bottom: 50px;
   }
 
   #mainProgram {
@@ -695,7 +695,7 @@ p {
     align-items: center;
     padding: 30px 11%;
   }
-  
+
   #partnerTitleDesk {
     font-size: 38px;
     color: whitesmoke;
@@ -782,14 +782,11 @@ p {
 
   #logoTxt {
     font-size: 16px;
+    display: none;
   }
 
   .divisionBar {
     width: 10%;
-  }
-
-  #logoTxt {
-    display: none;
   }
 
   #logoTxtDesk {
@@ -811,6 +808,7 @@ p {
 
   #pastSummits {
     gap: 10px;
+    padding: 30px 15%;
   }
 
   #pastDesc {
@@ -853,9 +851,5 @@ p {
     font-size: 12px;
     line-height: 100%;
     color: white;
-  }
-
-  #pastSummits {
-    padding: 30px 15%;
   }
 }
