Add JS functions to create and remove speakersCards dinamically

--- a/styles.css
+++ b/styles.css
@@ -278,6 +278,10 @@ p {
   height: 10px;
 }
 
+#moreBttn {
+  display: flex;
+}
+
 #lessBttn {
   display: none;
 }
@@ -335,6 +339,10 @@ p {
   font-weight: bold;
   text-decoration: underline;
   color: inherit;
+}
+
+.speakerHide {
+  display: none;
 }
 
 #logoSection {
@@ -736,12 +744,13 @@ ul {
     padding: 0 15%;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 40px;
+    justify-content: space-between; 
+    gap: 10px;
+    margin-bottom: 30px;
   }
 
   .speakerCard {
-    width: 49%;
+    width: 45%;
   }
 
   .speakerName {
@@ -768,6 +777,10 @@ ul {
 
   #moreBttn {
     display: none;
+  }
+
+  .speakerHide {
+    display: flex;
   }
 
   #partnersDesk {
